--- a/css/component.css
+++ b/css/component.css
@@ -374,7 +374,7 @@ div.bl-panel-items > div.bl-hide-current-work {
 }
 
 .bl-main > section:first-child.bl-expand {
-	background: #EE4444;
+	background: #e74c3c;
 }
 .bl-main > section:nth-child(2).bl-expand {
 	background: #F98262;
