--- a/css/component.css
+++ b/css/component.css
@@ -377,7 +377,7 @@ div.bl-panel-items > div.bl-hide-current-work {
 	background: #e74c3c;
 }
 .bl-main > section:nth-child(2).bl-expand {
-	background: #F98262;
+	background: #FFFFFF;
 }
 .bl-main > section:nth-child(3).bl-expand {
 	background: #4BBE8E;
