--- a/css/component.css
+++ b/css/component.css
@@ -69,7 +69,7 @@ a:hover {
 .bl-main > section:nth-child(2) {
 	top: 0;
 	left: 50%;
-	background: #e67e22;
+	background: #f39c12;
 }
 
 .bl-main > section:nth-child(3) {
