--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,16 @@
 /* ==========================================================================
 HTML5 display definitions
 ========================================================================== */
- 
+ *, *::after, *::before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*::after, *::before {
+  content: '';
+}
+
 /* * Corrects `block` display not defined in IE 6/7/8/9 and Firefox 3. */
  
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary { display: block; }
