--- a/public/css/fireworks2.css
+++ b/public/css/fireworks2.css
@@ -7,7 +7,7 @@ canvas {
   cursor: crosshair;
   display: block;
     /* Location of the image */
-  background: url('https://images.unsplash.com/27/hailo-street.jpg?ixlib=rb-0.3.5&q=80&fm=jpg&s=ee871578f3d79b22cf7afe748f3335f2');
+  background: url('https://images.unsplash.com/photo-1445233566136-a2a4e2c38bc2?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=0d394dec42cfac192d1e278e82cd9e07');
   
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
