--- a/css/styles.css
+++ b/css/styles.css
@@ -671,19 +671,9 @@ Main components
   }
 }
 .loveC {
-  color: #666;
-  font-size: 12px;
-  display: block;
+  color: white;
   position: absolute;
   bottom: 10px;
-  position: absolute;
-  width: 90%;
-  left: 50%;
-  top: 45%;
-  bottom: auto;
-  right: auto;
-  transform: translateX(-50%) translateY(-50%);
-  text-align: center;
 }
 .loveC a {
   color: #000000;
