--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,7 @@ footer a { color: #a1a9b0; }
 footer { background-color: #242830; padding: 40px 0 30px; }
 footer p { color: #fff; }
 ul.legals { list-style: none; color: #fff; line-height: 25px; }
+ul.legals li {display: inline;}
 ul.legals li::after { content: " |"; }
 ul.legals li:last-child::after { content: ""; }
 /* ==========================================================================
