--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ Navigation
   background: #FFF;
 }
 .button_container span {
-  background: #FF5252;
+  background: #000;
   border: none;
   height: 5px;
   width: 100%;
