--- a/css/styles.css
+++ b/css/styles.css
@@ -386,7 +386,7 @@ Navigation
 
 .overlay {
   position: fixed;
-  background: #FF5252;
+  background: #1abc9c;
   top: 0;
   left: 0;
   width: 100%;
