--- a/css/styles.css
+++ b/css/styles.css
@@ -427,7 +427,7 @@ Navigation
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   font-size: 50px;
-  font-family: 'Vollkorn', serif;
+  font-family: 'Varela Round', 'Raleway', 'Vollkorn', serif;
   font-weight: 400;
   text-align: center;
 }
