--- a/public/css/disco.css
+++ b/public/css/disco.css
@@ -7,6 +7,7 @@ body {
     border: 0;
     font-size: 100%;
     vertical-align: baseline;
+    font-family: 'Century Gothic';
 }
 .page {
     width: 100vw;
