--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -2,7 +2,7 @@
 	text-align: center; 
 	width: 178px; 
 	height: auto;
-	right: 15px; 
+	left: 15px; 
 	top: 35px;  
 	position: fixed; 
 	background: rgba(255,255,255,0.8);
