--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -91,9 +91,9 @@
 		padding: 10px;
 	}
 
-	#cdawrap /* .carbon-img */ {
+	/* #cdawrap .carbon-img  {
 		display: none;
-	}
+	} */
 
 	#cda-remove {
 		width: 30px;
