--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -66,7 +66,7 @@
 	display: inline-block;
 	font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 }
-
+/*
 @media screen and (max-width: 800px){ 
 	#cdawrap {
 		width: 100%; 
@@ -91,9 +91,9 @@
 		padding: 10px;
 	}
 
-	/* #cdawrap .carbon-img  {
+	#cdawrap .carbon-img  {
 		display: none;
-	} */
+	}
 
 	#cda-remove {
 		width: 30px;
@@ -106,3 +106,4 @@
 @media screen and (max-width: 460px){ 
 	#cdawrap { display: none; }
 }
+*/
