--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -90,11 +90,11 @@
 		font-size: 9px;
 		padding: 10px;
 	}
-
+/*
 	#cdawrap .carbon-img {
 		display: none;
 	}
-
+*/
 	#cda-remove {
 		width: 30px;
 		height: 30px;
