--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -90,11 +90,24 @@
 		font-size: 9px;
 		padding: 10px;
 	}
-/*
-	#cdawrap .carbon-img {
-		display: none;
-	}
-*/
+.carbon-text {
+    display: block;
+    float: left;
+    max-width: 50%;
+    text-align: left;
+  }
+
+  .carbon-img {
+    float: left;
+    margin-right: 1em;
+  }
+
+  .carbon-poweredby {
+    display: block;
+    float: right;
+    margin-top: -1.9em;
+    font-size: .8em;
+  }
 	#cda-remove {
 		width: 30px;
 		height: 30px;
