--- a/css/carbonadstyles.css
+++ b/css/carbonadstyles.css
@@ -74,7 +74,7 @@
 		right: 0px; 
 		top: auto !important; 
 		bottom: 0px !important;
-		left: 0px !importat;
+		left: 0px !important;
 		background: #fff;n
 		padding: 15px 50px 10px 10px;
 		text-align: left;
