--- a/public/css/backgroundchange.css
+++ b/public/css/backgroundchange.css
@@ -14,6 +14,13 @@ input[type="file"] {
 }
 
 button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: stretch;
+  width: 100%;
+  height: 100%;
   background: transparent;
   border: 2px solid whitesmoke;
   border-radius: 6px;
