--- a/public/css/sillycursor.css
+++ b/public/css/sillycursor.css
@@ -1,8 +1,28 @@
 @import url(http://fonts.googleapis.com/css?family=Varela+Round);
 body, html {
+  text-transform: uppercase;
   cursor: none;
   font-family: 'Varela Round', sans-serif;
-  background-color: #BBFFFF;
+    /* Location of the image */
+  background-image: url('https://images.unsplash.com/photo-1452800185063-6db5e12b8e2e?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=c20edde459d588310aa3dd6a7d7d5446');
+  
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+  
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+  
+  /* Background image is fixed in the viewport so that it doesn't move when 
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+  
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+  
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
 }
 
 h1 {
