--- a/public/css/worm.css
+++ b/public/css/worm.css
@@ -1,9 +1,12 @@
-canvas {
-  height: 100%;
-  width: 100%;
-  background: url('https://images.unsplash.com/photo-1452716726610-30ed68426a6b?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375')no-repeat center center fixed;
+body {
+    background: url('https://images.unsplash.com/photo-1452716726610-30ed68426a6b?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375')no-repeat center center fixed;
     -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; 
+  background-size: cover;
+}
+canvas {
+  height: 100%;
+  width: 100%;
+background: transparent; 
 }
