--- a/public/css/worm.css
+++ b/public/css/worm.css
@@ -4,6 +4,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  overflow: hidden;
 }
 canvas {
   height: 100%;
