--- a/public/css/mousetracker.css
+++ b/public/css/mousetracker.css
@@ -1,7 +1,7 @@
 body{
   cursor:none;
   position:absolute;
-  
+  overflow:hidden;
   background-color:black;  
   -webkit-perspective:80px;  
           perspective:80px;
