--- a/public/css/pomorodo.css
+++ b/public/css/pomorodo.css
@@ -4,7 +4,7 @@ html {
   height: 100%;
   text-align: center;
   /* Location of the image */
-  background-image: url('https://images.unsplash.com/photo-1449452198679-05c7fd30f416?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=522c885c32754bef477385c252eeddce');
+  background-image: url('https://images.unsplash.com/photo-1454817481404-7e84c1b73b4a?crop=entropy&fit=crop&fm=jpg&h=675&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375');
   
   /* Background image is centered vertically and horizontally at all times */
   background-position: center center;
