--- a/public/css/scrollspeed.css
+++ b/public/css/scrollspeed.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Quicksand);
 body {
+  color:white;
   /* Location of the image */
   background-image: url('https://images.unsplash.com/photo-1433360405326-e50f909805b3?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1080&fit=max&s=359e8e12304ffa04a38627a157fc3362');
   
