--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+/*  HIGHLIGHT COLOR */
+html::selection {
+  background: #e74c3c;
+}
+html::-moz-selection {
+  background: #e74c3c;
+}
+
+
 /* ! normalize.css v1.0.0 | MIT License | git.io/normalize */
  
 /* ==========================================================================
