--- a/public/css/randomwords.css
+++ b/public/css/randomwords.css
@@ -1,78 +1,20 @@
-html, body, h1 {
-  height: 100%;
-  width: 100%;
-}
-
+@import url(https://fonts.googleapis.com/css?family=Luckiest+Guy);
 body {
-  -webkit-transition: background-color 0.3s ease-in;
-  transition: background-color 0.3s ease-in;
-  font-family: "Open Sans", sans-serif;
-  background-color: #ff002b;
-  overflow: hidden;
-  font-size: 12px;
-}
-@media (min-width: 480px) {
-  body {
-    font-size: 14px;
-  }
-}
-@media (min-width: 640px) {
-  body {
-    font-size: 16px;
-  }
-}
-
-.word {
-  font-family: "Bangers", cursive;
-  font-size: 10vh;
-}
-
-svg {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  top: -1rem;
-  -webkit-animation: pop-out 2s ease-in-out infinite;
-          animation: pop-out 2s ease-in-out infinite;
-}
-
-.word {
-  font-family: "Bangers", cursive;
-  letter-spacing: 0.05em;
-  color: white;
-  padding: 0.5em;
-  font-size: 28px;
-}
-@media (min-width: 480px) {
-  .word {
-    font-size: 36px;
-  }
-}
-@media (min-width: 640px) {
-  .word {
-    font-size: 48px;
-  }
-}
-@media (min-width: 960px) {
-  .word {
-    font-size: 64px;
-  }
-}
-@media (min-width: 1280px) {
-  .word {
-    font-size: 84px;
-  }
-}
-
-p {
+  background: red;
   position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  line-height: 2rem;
+  font-family: 'Luckiest Guy';
   text-align: center;
-  color: rgba(255, 255, 255, 0.75);
-  background-color: #222222;
+  top: 50%;
+  left: 50%;
+  transition: all 1s ease;
+  transform: translate(-50%, -50%);
+}
+
+h1 {
+  color: white;
+  font-size: 12vh;
+  animation: pop-out 2s ease-in-out infinite;
+  
 }
 
 @-webkit-keyframes pop-out {
@@ -110,6 +52,4 @@ p {
     opacity: 0;
   }
 }
-a, a:visited {
-  color: inherit;
-}
+
