--- a/public/css/coin.css
+++ b/public/css/coin.css
@@ -16,8 +16,30 @@ img {
 }
 
 .flip {
+  font-family: inherit;
+  font-size: inherit;
+  background: none;
+  cursor: pointer;
+  padding: 2vh 8vh;
+  display: inline-block;
+  margin: 15px 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: 700;
+  outline: none;
+  position: relative;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
   border: 3px solid #fff;
   color: #fff;
+}
+
+.flip:after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .flip:hover,
