--- a/public/css/password.css
+++ b/public/css/password.css
@@ -3,7 +3,7 @@ body {
   text-align: center;
   font-family: 'Quicksand';
   /* Location of the image */
-  background-image: url('https://images.unsplash.com/photo-1453230806017-56d81464b6c5?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375);
+  background-image: url('https://images.unsplash.com/photo-1453230806017-56d81464b6c5?crop=entropy&fit=crop&fm=jpg&h=650&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1375');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
