--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,18 @@
   background: #1abc9c;
 }
 
+body::-webkit-scrollbar {
+    width: 0.8em;
+    background-color: #2c3e50;
+}
+
+body::-webkit-scrollbar-thumb {
+    mix-blend-mode: difference;
+    background-color: #7f8c8d;
+}
+
+
+
 
 /* ! normalize.css v1.0.0 | MIT License | git.io/normalize */
  
